--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,101 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+/* styles
+karla 20 medium
+  font-family: "Karla", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+karla regular 16
+  font-family: "Karla", sans-serif;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
+  font-size: 16px;
+markazi 64 medium
+  font-family: "Markazi Text", serif;
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+  font-size: 64px;
+markazi regular 32
+  font-family: "Markazi Text", serif;
+  font-weight: 400;
+  font-size: 32px;
+markazi 24 bold
+  font-family: "Markazi Text", serif;
+  font-weight: 700;
+  font-size: 24px;
+*/
+
 
 body {
-  margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  max-width: 80vw;
+  margin: 0 auto;
+  font-family: "Karla", sans-serif;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-family: "Markazi Text", serif;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  font-size: 64px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.markazi-32 {
+  font-family: "Markazi Text", serif;
+  font-weight: 400;
+  font-size: 32px;
+}
+
+nav {
+  background-color: #fff;
+  padding: 2rem 1rem 2rem 0; /* Adjust as needed */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Karla", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+nav img {
+  height: 3rem;
+}
+
+nav ul {
+  list-style: none;
+  display: flex;
+}
+
+nav ul li {
+  margin: 0 2rem;
+}
+
+nav a {
+  text-decoration: none;
+  color: #333;
+  &:hover {
+      color: #007bff;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@media (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+    align-items: left;
   }
-  button {
-    background-color: #f9f9f9;
+  nav ul li {
+    margin: 0.5rem 0;
   }
+}
+
+footer {
+  display: flex;
+  text-align: left;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  background-color: #D9D9D9;
+  padding: 3rem;
+  align-self: center;
+}
+footer div {
+  flex: 1 1 auto;
+}
+footer h3 {
+  color: #495E57;
 }
