--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,18 @@ markazi 24 bold
   font-size: 24px;
 */
 
-#root {
+/* #root {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 10px solid black;
   width: 100vw;
+} */
+
+.content {
+  max-width: 80vw;
+  margin: 0 auto;
 }
 
 body {
@@ -160,3 +165,9 @@ footer h3 {
   font-weight: 500;
   color: white;
 }
+
+.brand-description img {
+  width: 300px;
+}
+
+/* put basic formatting on everything first */
