--- a/src/index.css
+++ b/src/index.css
@@ -30,13 +30,21 @@ markazi 24 bold
   width: 100vw;
 } */
 
+.homepage {
+  width: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   font-family: "Karla", sans-serif;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; 
+  very unfortunate line spent a lot of time troubleshooting
+  basically centering it will make the things take less space
+  better value would be space-between
+   */
 }
 
 h1 {
@@ -169,7 +177,7 @@ footer h3 {
 }
 
 .specials > div {
-  /* max-width: 80vw; */
+  max-width: 80vw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -177,15 +185,46 @@ footer h3 {
 .specials h1 {
   margin: 0;
   line-height: 0.7;
-  width: 100%;
 }
 .specials > div > div {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.special-card {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  background-color: #EDEFEE;
+}
+
+.special-card > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.special-card img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+
+.special-card > div > p {
+  font-family: "Markazi Text", serif;
+  font-weight: 700;
+  font-size: 24px;
+  color: #EE9972;
 }
 
 .testimonials {
-  background-color: #EDEFEE;
+  background-color: #EE9972;
 }
 .testimonials > div {
   max-width: 80vw;
@@ -197,7 +236,6 @@ footer h3 {
   text-align: center;
   margin: 0;
   line-height: 0.7;
-  width: 100%;
 }
 .testimonials > div > div {
   display: flex;
