--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,7 @@ button {
 }
 
 nav {
-  max-width: 80vw;
+  max-width: 75vw;
   margin: 0 auto;
   padding: 2rem 1rem 2rem 0;
   display: flex;
@@ -117,7 +117,7 @@ footer {
   background-color: #EDEFEE;
 }
 footer > div {
-  max-width: 80vw;
+  max-width: 75vw;
   margin: 1rem auto 0 auto;
   display: flex;
   text-align: left;
@@ -136,20 +136,20 @@ footer h3 {
 /* HomePage */
 .hero {
   background-color: #495E57;
+  padding: 2rem 0;
 }
 .hero > div {
-  max-width: 80vw;
+  max-width: 75vw;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .hero img {
   width: 400px;
   height: 400px;
-  margin: 2rem;
-
+  object-fit: cover;
+  object-position: center;
 }
 .hero > div > div {
   display: flex;
@@ -176,22 +176,23 @@ footer h3 {
   margin: 2rem 0;
 }
 
+.specials {
+  padding: 2rem 0;
+}
 .specials > div {
-  max-width: 80vw;
+  max-width: 75vw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
-.specials h1 {
-  margin: 0;
-  line-height: 0.7;
+.specials h1, .specials button {
+  margin: 0 0 2rem 0;
 }
 .specials > div > div {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .special-card {
   display: flex;
   flex-direction: column;
@@ -200,13 +201,13 @@ footer h3 {
   border-top-right-radius: 16px;
   background-color: #EDEFEE;
 }
-
 .special-card > div {
+}
+.special-card > div > div {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .special-card img {
   width: 200px;
   height: 200px;
@@ -215,35 +216,76 @@ footer h3 {
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
 }
-
 .special-card > div > p {
+  color: #333;
+}
+.special-card > div > div > p {
   font-family: "Markazi Text", serif;
   font-weight: 700;
   font-size: 24px;
   color: #EE9972;
+  margin: 0;
+}
+.special-card > div > div > h3 {
+  font-family: "Markazi Text", serif;
+  font-weight: 700;
+  font-size: 24px;
+  margin: 0;
 }
 
 .testimonials {
   background-color: #EE9972;
+  padding: 2rem 0;
 }
 .testimonials > div {
-  max-width: 80vw;
+  max-width: 75vw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 .testimonials h1 {
   text-align: center;
-  margin: 0;
-  line-height: 0.7;
+  margin: 0 0 2rem 0;
 }
 .testimonials > div > div {
   display: flex;
   justify-content: space-between;
 }
+.testimonial-card {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding: 2rem;
+}
+.testimonial-card img {
+  width: 100px;
+  height: 100px;
+  border-radius: 16px;
+}
+.testimonial-card > div {
+  display: flex;
+  justify-content: space-between;
+}
+.testimonial-card h3 {
+  font-family: "Karla", sans-serif;
+  font-weight: 800;
+  font-size: 16px;
+  margin: 0;
+}
+.testimonial-card > div {
+  align-items: center;
+}
+.testimonial-card > div > h3 {
+  font-family: "Karla", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+}
 
+.brand-description {
+  padding: 2rem 0;
+}
 .brand-description > div {
-  max-width: 80vw;
+  max-width: 75vw;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -251,6 +293,9 @@ footer h3 {
 }
 .brand-description img {
   width: 300px;
+  height: 300px;
+  object-fit: cover;
+  object-position: center;
 }
 .brand-description > div > div {
   display: flex;
@@ -260,7 +305,6 @@ footer h3 {
 .brand-description h1 {
   text-align: left;
   margin: 0;
-  line-height: 0.7;
 }
 .brand-description h2 {
   text-align: left;
