styling the homepage

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,22 @@ markazi 24 bold
   width: 100vw;
 } */
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 12px;
+}
+::-webkit-scrollbar-track {
+  background: hsl(0, 0%, 92%);
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: hsl(0, 0%, 70%);
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: hsl(0, 0%, 55%);
+}
+
 .homepage {
   width: 100%;
 }
@@ -71,7 +87,7 @@ button {
 }
 
 nav {
-  max-width: 75vw;
+  max-width: 70vw;
   margin: 0 auto;
   padding: 2rem 1rem 2rem 0;
   display: flex;
@@ -117,7 +133,7 @@ footer {
   background-color: #EDEFEE;
 }
 footer > div {
-  max-width: 75vw;
+  max-width: 70vw;
   margin: 1rem auto 0 auto;
   display: flex;
   text-align: left;
@@ -132,14 +148,17 @@ footer div {
 footer h3 {
   color: #495E57;
 }
+footer img {
+  width: 156px;
+  border-radius: 16px;
+}
 
 /* HomePage */
 .hero {
   background-color: #495E57;
-  padding: 2rem 0;
 }
 .hero > div {
-  max-width: 75vw;
+  max-width: 70vw;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -147,9 +166,12 @@ footer h3 {
 }
 .hero img {
   width: 400px;
-  height: 400px;
+  height: 500px;
   object-fit: cover;
   object-position: center;
+  margin: 2rem 0 -4rem 0;
+  border-radius: 16px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 .hero > div > div {
   display: flex;
@@ -169,7 +191,7 @@ footer h3 {
 }
 .hero p {
   text-align: left;
-  max-width: 320px ;
+  max-width: 300px ;
   font-size: 20px;
   font-weight: 500;
   color: white;
@@ -177,16 +199,16 @@ footer h3 {
 }
 
 .specials {
-  padding: 2rem 0;
+  padding: 7rem 0 4rem 0;
 }
 .specials > div {
-  max-width: 75vw;
+  max-width: 70vw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 .specials h1, .specials button {
-  margin: 0 0 2rem 0;
+  margin: 0 0 4rem 0;
 }
 .specials > div > div {
   display: flex;
@@ -201,16 +223,14 @@ footer h3 {
   border-top-right-radius: 16px;
   background-color: #EDEFEE;
 }
-.special-card > div {
-}
 .special-card > div > div {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .special-card img {
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 170px;
   object-fit: cover;
   object-position: center;
   border-top-left-radius: 16px;
@@ -235,21 +255,22 @@ footer h3 {
 
 .testimonials {
   background-color: #EE9972;
-  padding: 2rem 0;
+  padding: 10rem 0 15rem 0;
 }
 .testimonials > div {
-  max-width: 75vw;
+  max-width: 70vw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 .testimonials h1 {
   text-align: center;
-  margin: 0 0 2rem 0;
+  margin: 0 0 4rem 0;
 }
 .testimonials > div > div {
   display: flex;
   justify-content: space-between;
+  overflow-x: auto;
 }
 .testimonial-card {
   display: flex;
@@ -282,21 +303,34 @@ footer h3 {
 }
 
 .brand-description {
-  padding: 2rem 0;
+  padding: 6rem 0;
 }
 .brand-description > div {
-  max-width: 75vw;
+  max-width: 70vw;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 .brand-description img {
-  width: 300px;
-  height: 300px;
+  width: 330px;
+  height: 370px;
   object-fit: cover;
   object-position: center;
+  border-radius: 16px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  position: absolute;
 }
+.brand-description img:first-of-type {
+  right: 250px;
+  bottom: -4rem;
+  z-index: -1;
+}
+.brand-description img:last-of-type {
+  right: 0px;
+}
+
 .brand-description > div > div {
   display: flex;
   flex-direction: column;
