--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ markazi 24 bold
 } */
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 12px;
   height: 12px;
 }
 ::-webkit-scrollbar-track {
@@ -98,7 +98,6 @@ button:active {
 }
 
 nav {
-  max-width: 60vw;
   margin: 0 auto;
   padding: 2rem 1rem 2rem 0;
   display: flex;
@@ -142,8 +141,9 @@ footer > div {
   margin: 1rem auto 0 auto;
   display: flex;
   padding: 3rem 0;
+  gap: 2rem;
 }
-footer div {
+footer > div > div {
   flex: 1 1 auto;
 }
 footer h3 {
@@ -163,6 +163,7 @@ footer img {
 }
 .hero > div {
   margin: 0 auto;
+  padding: 2rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -172,7 +173,7 @@ footer img {
   height: 31rem;
   object-fit: cover;
   object-position: center;
-  margin: 2rem 0 -4rem 0;
+  margin-bottom: -4rem;
   border-radius: 1rem;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
@@ -291,6 +292,7 @@ footer img {
 }
 .testimonial-card img {
   margin: 1rem 1rem 0 0;
+  border-radius: 50%;
 }
 .testimonial-card > div > div {
   display: flex;
@@ -361,26 +363,148 @@ footer img {
   color: #333;
 }
 @media (max-width: 1250px) {
-  content {
-    max-width: 80vw;
+  .content {
+    max-width: 82vw;
   }
   nav ul li {
-    margin: 0 1rem;
+    margin: 0 0.8rem;
+  }
+
+  .hero img {
+    width: 40vw;
+  }
+  .hero p {
+    max-width: 18rem;
+  }
+
+  .special-card {
+    width: 24vw;
+  }
+  .special-card img {
+    width: 24vw;
+  }
+
+  .testimonials > div > div{
+    gap: 1rem;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  }
+  .testimonial-card {
+    width: 14rem;
+  }
+  .testimonial-card > div > div {
+    white-space: nowrap;
+  }
+
+  .brand-description img:first-of-type {
+    left: 25rem;
+    top: 6rem;
+    z-index: -1;
+  }
+  .brand-description img:last-of-type {
+    left: 30rem;
+  }
+  .brand-description p {
+    max-width: 30vw;
   }
 }
-@media (max-width: 800px) {
-  content {
-    max-width: 95vw;
+@media (max-width: 1020px) {
+  .brand-description img:first-of-type {
+    left: 23rem;
+    top: 6rem;
+    z-index: -1;
+  }
+  .brand-description img:last-of-type {
+    left: 30rem;
+  }
+  .brand-description p {
+    max-width: 35vw;
+  }
+}
+@media (max-width: 780px) {
+  .content {
+    max-width: 90vw;
+  }
+  nav {
+    flex-direction: column;
   }
   nav ul {
-    flex-direction: column;
-    align-items: left;
+    gap: 2rem;
+    flex-wrap: wrap;
+    justify-content: center;
   }
   nav ul li {
-    margin: 0.5rem 0;
+    margin: 0;
   }
+
   footer > div {
     flex-direction: column;
+    gap: 0;
+  }
+  footer img {
+    width: 100%;
+    height: 15rem;
+    object-fit: cover;
+  }
+  .hero > div {
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .hero img {
+    width: 100%;
+    height: 20rem;
+    margin: 0;
+  }
+  .hero p {
+    max-width: 100%;
+  }
+
+  .specials h1 {
+    margin: 0;
+  }
+  .specials button {
+    margin: 0 0 1rem 0;
+  }
+  .specials > div > div {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .special-card {
+    width: 100%;
+  }
+  .special-card img {
+    width: 100%;
+    height: 15rem;
+  }
+  .special-card > div > p:first-of-type {
+    color: #333;
+    min-height: 0;
+  }
+
+  .testimonials > div > div {
+    gap: 1rem;
+    box-shadow: none;
+  }
+  .testimonials h1 {
+    margin: 0 0 1rem 0;
+  }  
+  .testimonials > div > div {
+    flex-direction: column;
+  }
+  .testimonial-card {
+    width: 100%;
+  }
+  
+  .brand-description > div {
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .brand-description img {
+    position: static;
+    width: 100%;
+    height: 15rem;
+  } 
+  .brand-description p {
+    max-width: 100%;
   }
 }
 
