--- a/src/index.css
+++ b/src/index.css
@@ -150,11 +150,7 @@ footer h3 {
   color: #495E57;
 }
 footer img {
-  width: 13rem;
-  height: 20rem;
-  object-fit: cover;
-  object-position: 70% 0;
-  border-radius: 1rem;
+  width: 9rem;
 }
 
 /* HomePage */
@@ -442,8 +438,10 @@ footer img {
   }
   footer img {
     width: 100%;
-    height: 15rem;
+    height: 12rem;
     object-fit: cover;
+    object-position: 50% 40%;
+    border-radius: 1rem;
   }
   .hero > div {
     flex-direction: column;
