form validation with formik and yup

--- a/src/index.css
+++ b/src/index.css
@@ -520,25 +520,34 @@ form {
   padding: 2rem;
   border-radius: 1rem;
 }
-
 form h2 {
-  margin: 0.5rem 0 2rem 0;
+  margin: 0.5rem 0;
 }
-
+form label {
+  margin: 2rem 0 0.5rem 0;
+}
 form select, form input {
   font-size: 20px;
   font-weight: 500;
   padding: 0.5rem 1rem;
   border-radius: 1rem;
-  border: 1px solid black;
-  margin: 0.5rem 0 2rem 0;
-
+  border: 2px solid hsl(0, 0%, 50%);
 }
-
 .booking-page button {
   margin: 2rem auto 1rem auto;
-
-} 
+}
+.disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+.input-error {
+  border: 2px solid hsl(0, 80%, 50%, 0.7);
+}
+.input-error-message {
+  color: hsl(0, 80%, 50%, 0.7);
+  font-size: 1.1rem;
+  margin: 0.5rem 0 0 0;
+}
 
 /* OtherPages */
 .other-page {
