--- a/src/index.css
+++ b/src/index.css
@@ -129,9 +129,27 @@ a {
   color: black;
   text-decoration: none;
   transition: color 0.3s;
+  position: relative;
 }
 a:hover {
-  color: hsl(211, 100%, 70%);
+  color: #EE9972;
+}
+nav a::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-radius: 4px;
+  background-color: #EE9972;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+nav a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
 
 footer {
