--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@ a {
 a:hover {
   color: #EE9972;
 }
-nav a::before {
+nav li a::before {
   content: '';
   position: absolute;
   width: 100%;
@@ -147,9 +147,13 @@ nav a::before {
   transform: scaleX(0);
   transition: transform .3s ease-in-out;
 }
-nav a:hover::before {
+nav li a:hover::before {
   transform-origin: left;
   transform: scaleX(1);
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
 
 footer {
